<resources>
    <string name="app_name">Kas</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_kas_masuk">Kas Masuk</string>
    <string name="read_more">Selengkapnya</string>
    <string name="title_kas_keluar">Kas Keluar</string>
    <string name="jumlah">Jumlah</string>
    <string name="keterangan">Keterangan</string>
    <string name="pilih_tipe_kas">Pilih Tipe Kas</string>
    <string name="action_about">Tentang</string>
</resources>