<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahKasActivity"
    android:padding="16dp">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pilih_tipe_kas"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:id="@+id/actTambahKasMenu"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilJumlah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jumlah"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilMenu"
        android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/tieTambahKasJumlah"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilKeterangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/keterangan"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilJumlah"
        android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/tieTambahKasKeterangan"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnTambahKasSimpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Simpan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilKeterangan"
        android:layout_marginTop="8dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>